# Biome

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  ROME_CHANGELOG.md  biome.json  clippy.toml  knope.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taplo.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Documentation/: modules.html
benchmark/: README.md  bench.eslint.config.js  bench.js  biome.json  dprint.json  package.json  run.js  ts-biome.json  tsconfig.json
benchmark/Documentation/: index.html  modules.html
crates/biome_analyze/: CONTRIBUTING.md  Cargo.toml
crates/biome_aria/: Cargo.toml
crates/biome_aria_metadata/: Cargo.toml  aria-data.json  build.rs
crates/biome_cli/: Cargo.toml  README.md
crates/biome_configuration/: Cargo.toml
crates/biome_console/: Cargo.toml  LICENSE  README.md
crates/biome_control_flow/: Cargo.toml
crates/biome_css_analyze/: Cargo.toml
crates/biome_css_factory/: Cargo.toml
crates/biome_css_formatter/: Cargo.toml  README.md
crates/biome_css_parser/: Cargo.toml  LICENSE  README.md
crates/biome_json_syntax/: Cargo.toml
crates/biome_json_syntax/Source/: file_source.rs  lib.rs  member_ext.rs  string_ext.rs  syntax_node.rs
crates/biome_yaml_factory/: Cargo.toml
crates/biome_yaml_factory/Source/: lib.rs
docs/: index.html
fuzz/: README.md  init-fuzzer.sh  reinit-fuzzer.sh
scripts/: print-changelog.sh  update-manifests.mjs
website/: package.json
xtask/: Cargo.toml  README.md
(+2808 files in other folders)
