[package]
authors.workspace = true
categories.workspace = true
description = "SyntaxKind and common rowan definitions for biome_json_parser"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "biome_json_syntax"
repository.workspace = true
version = "0.5.7"

[dependencies]
biome_rowan = { workspace = true, features = ["serde"] }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

[features]
schema = ["biome_rowan/serde", "schemars"]

[lints]
workspace = true
