[package]
authors.workspace = true
categories.workspace = true
description = "Utilities to create YAML AST for biome_yaml_parser"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "biome_yaml_factory"
repository.workspace = true
version = "0.0.1"

[dependencies]
biome_rowan = { workspace = true }
biome_yaml_syntax = { workspace = true }

[lints]
workspace = true
